--- a/index.html
+++ b/index.html
@@ -2,21 +2,22 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="css/styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
     <form action="/" method="post">
-        <h1>Welcome to the weather app</h1>
+        <h1>Welcome to the weather app <img src="https://www.freeiconspng.com/thumbs/rain-png/rain-clouds-png-27.png"/></h1>
         <h2>Enter your location</h4>
+
 
         <div class="City">
         <label for="cityInput">City Name: </label>
         <input id="cityInput" type="text" name="cityName">
-        <button type="submit">Go</button>
+        <button id="btn" type="submit">Go</button>
     </div>
     </form>
 </body>
